--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <button class="theme-toggle" onclick="toggleTheme()">Toggle Dark Mode</button>
-    <h1>QR Code Generator for App Store Links</h1>
+    <h1>AppLinkr - QR Codes for AppStores</h1>
     <form action="/generate_qr" method="post">
         <label for="title">Title:</label><br>
         <input type="text" id="title" name="title" required><br><br>
