--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -114,8 +114,8 @@
     <nav>
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
         <div class="menu">
-            <a href="index.html">QR Generator</a>
-            <a href="admin.html">Admin</a>
+            <a href="{{ url_for('index') }}">QR Generator</a>
+            <a href="{{ url_for('admin') }}">Admin</a>
         </div>
     </nav>
 
