--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -96,12 +96,15 @@
             align-items: center;
             background-color: #007bff;
             padding: 10px;
+            position: relative;
+      
         }
         nav a {
             color: white;
             text-decoration: none;
             padding: 10px;
         }
+
         nav a:hover {
             background-color: #0056b3;
             border-radius: 4px;
@@ -109,29 +112,38 @@
         .menu {
             display: flex;
             gap: 20px;
+            
         }
-        /* Responsive styles */
+        .menu-icon {
+            display: none; 
+            font-size: 24px;
+            cursor: pointer;
+        }
         @media (max-width: 768px) {
             .menu {
-                display: none;
+                display: none; 
                 flex-direction: column;
                 gap: 10px;
+                position: absolute; 
+                background-color: #007bff; 
+                width: 100%; 
+                z-index: 1000; 
+                padding: 10px 0; 
             }
             .menu.active {
-                display: flex;
+                display: flex; 
             }
             .menu-icon {
-                display: block;
+                display: block; 
             }
         }
-
-
     </style>
 </head>
 <body>
 
     <!-- Navigation bar -->
     <nav>
+        <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <div class="menu">
             <a href="{{ url_for('index') }}">QR Generator</a>
             <a href="{{ url_for('admin') }}">Admin</a>
@@ -139,7 +151,6 @@
         </div>      
     </nav>
 
-    
     <h1>AppLinkr - QR Codes for AppStores</h1>
     <form action="/generate_qr" method="post">
         <label for="title">Title:</label><br>
@@ -166,10 +177,13 @@
     {% endif %}
     
     <script>
-        
-
         function toggleTheme() {
             document.body.classList.toggle('dark-mode');
+        }
+
+        function toggleMenu() {
+            const menu = document.querySelector('.menu');
+            menu.classList.toggle('active'); 
         }
 
         function copyToClipboard() {
