--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -152,7 +152,7 @@
     </nav>
 
     <h1>AppLinkr - QR Codes for AppStores</h1>
-    <form action="/generate_qr" method="post">
+    <form action="/create" method="post">
         <label for="title">Title:</label><br>
         <input type="text" id="title" name="title" required><br><br>
 
