Menu bar position on mobile fix

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -58,7 +58,7 @@
                 display: none; 
                 flex-direction: column;
                 gap: 10px;
-                position: absolute; 
+                position:relative;
                 background-color: #007bff; 
                 width: 100%; 
                 z-index: 1000; 
