--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -172,6 +172,9 @@
             </div>
         {% endfor %}
     {% endif %}
+    <form action="/download_db" method="get" style="margin-top: 20px;">
+        <input type="submit" value="Download Database Backup" class="delete-button">
+    </form>
 
     <script>
         function toggleMenu() {
