--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -208,8 +208,8 @@
             <label for="title">Title:</label><br>
             <input type="text" id="title" name="title" required><br><br>
 
-            <label for="content">URL Content:</label><br>
-            <input type="url" id="content" name="content" placeholder="Enter a valid URL" required><br><br>
+            <label for="content">Redirect to:</label><br>
+            <input type="text" id="content" name="content" placeholder="Enter a valid URL" required><br><br>
 
             <input type="submit" value="Generate QR Code">
         </form>
